[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "doing-it-live"
version = "0.1.0"
description = "A sample project using hatchling and pydantic"
requires-python = ">=3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

# Is this the most recent version?
# Is this an acceptable range?
dependencies = [
    "pydantic>=2.0,<3.0"
]

[dependency-groups]
dev = [
    "uv",
    "ruff",
    "pytest",
    "pre-commit"
]
